@@ -19,6 +19,11 @@ sudo dpkg -i elasticsearch*.deb
 sudo bash -c "cat $configs/elasticsearch.yml > /etc/elasticsearch/elasticsearch.yml"
 sudo bash -c "cat $configs/logging.yml > /etc/elasticsearch/logging.yml"
 
+# change defaults
+sudo bash -c "echo 'ES_USE_GC_LOGGING=y' >> /etc/default/elasticsearch"
+sudo bash -c "echo 'export ES_USE_GC_LOGGING' >> /etc/default/elasticsearch"
+sudo bash -c "echo 'ES_JAVA_OPTS=-XX:+PrintGCDateStamps' >> /etc/default/elasticsearch"
+sudo bash -c "echo 'ES_HEAP_SIZE=1g' >> /etc/default/elasticsearch"
+
 # Configure init script and start elasticsearch
 sudo update-rc.d elasticsearch defaults 95 10
-sudo /etc/init.d/elasticsearch start
